# gosu-quad-test

./: .gitmodules  CMakeLists.txt
src/: GameWindow.cpp  GameWindow.hpp  main.cpp
